--- a/source/Irrlicht/Irrlicht10.0.vcxproj
+++ b/source/Irrlicht/Irrlicht10.0.vcxproj
@@ -413,6 +413,7 @@
     <ClInclude Include="..\..\include\irr\asset\IMesh.h" />
     <ClInclude Include="..\..\include\irr\asset\ICPUSkinnedMeshBuffer.h" />
     <ClInclude Include="..\..\include\irr\asset\IMeshManipulator.h" />
+    <ClInclude Include="..\..\include\irr\core\alloc\null_allocator.h" />
     <ClInclude Include="..\..\include\irr\video\convertColor.h" />
     <ClInclude Include="..\..\include\irr\video\decodePixels.h" />
     <ClInclude Include="..\..\include\irr\video\encodePixels.h" />
