WIP Some changes to shader classes

--- a/source/Irrlicht/Irrlicht10.0.vcxproj
+++ b/source/Irrlicht/Irrlicht10.0.vcxproj
@@ -409,15 +409,22 @@
     <ClInclude Include="..\..\include\irrTypes.h" />
     <ClInclude Include="..\..\include\irr\asset\bawformat\CBAWFile.h" />
     <ClInclude Include="..\..\include\irr\asset\bawformat\CBlobsLoadingManager.h" />
+    <ClInclude Include="..\..\include\irr\asset\ICPUShader.h" />
+    <ClInclude Include="..\..\include\irr\asset\ICPUSpecializedShader.h" />
+    <ClInclude Include="..\..\include\irr\asset\IGLSLCompiler.h" />
     <ClInclude Include="..\..\include\irr\asset\IMesh.h" />
     <ClInclude Include="..\..\include\irr\asset\ICPUSkinnedMeshBuffer.h" />
+    <ClInclude Include="..\..\include\irr\asset\ISPIR_VProgram.h" />
+    <ClInclude Include="..\..\include\irr\asset\ShaderCommons.h" />
     <ClInclude Include="..\..\include\irr\video\convertColor.h" />
     <ClInclude Include="..\..\include\irr\video\decodePixels.h" />
     <ClInclude Include="..\..\include\irr\video\encodePixels.h" />
     <ClInclude Include="..\..\include\irr\video\IGPUMesh.h" />
     <ClInclude Include="..\..\include\irr\video\IGPUMeshBuffer.h" />
     <ClInclude Include="..\..\include\irr\video\IGPUObjectFromAssetConverter.h" />
+    <ClInclude Include="..\..\include\irr\video\IGPUShader.h" />
     <ClInclude Include="..\..\include\irr\video\IGPUSkinnedMesh.h" />
+    <ClInclude Include="..\..\include\irr\video\IGPUSpecializedShader.h" />
     <ClInclude Include="..\..\include\irr\video\SGPUMesh.h" />
     <ClInclude Include="..\..\include\ITimer.h" />
     <ClInclude Include="..\..\include\Keycodes.h" />
@@ -562,6 +569,7 @@
     <ClInclude Include="..\..\src\irr\asset\CSTLMeshWriter.h" />
     <ClInclude Include="..\..\src\irr\asset\CXMeshFileLoader.h" />
     <ClInclude Include="..\..\src\irr\video\CGPUSkinnedMesh.h" />
+    <ClInclude Include="..\..\src\irr\video\COpenGLSpecializedShader.h" />
     <ClInclude Include="aesGladman\aestab.h" />
     <ClInclude Include="aesGladman\aes_ni.h" />
     <ClInclude Include="aesGladman\brg_endian.h" />
@@ -583,6 +591,8 @@
     <ClInclude Include="CSceneManager.h" />
     <ClInclude Include="CSkinnedMeshSceneNode.h" />
     <ClInclude Include="FW_Mutex.h" />
+    <ClInclude Include="libshaderc\shaderc\shaderc.h" />
+    <ClInclude Include="libshaderc\shaderc\shaderc.hpp" />
     <ClInclude Include="lzma\7zTypes.h" />
     <ClInclude Include="lzma\Alloc.h" />
     <ClInclude Include="lzma\Compiler.h" />
@@ -624,6 +634,14 @@
     <ClInclude Include="COpenGLSLMaterialRenderer.h" />
     <ClInclude Include="COpenGLTexture.h" />
     <ClInclude Include="glext.h" />
+    <ClInclude Include="spirv_cross\spirv.hpp" />
+    <ClInclude Include="spirv_cross\spirv_cfg.hpp" />
+    <ClInclude Include="spirv_cross\spirv_common.hpp" />
+    <ClInclude Include="spirv_cross\spirv_cross.hpp" />
+    <ClInclude Include="spirv_cross\spirv_cross_parsed_ir.hpp" />
+    <ClInclude Include="spirv_cross\spirv_glsl.hpp" />
+    <ClInclude Include="spirv_cross\spirv_parser.hpp" />
+    <ClInclude Include="spirv_cross\spirv_reflect.hpp" />
     <ClInclude Include="utf8\source\utf8.h" />
     <ClInclude Include="wglext.h" />
     <ClInclude Include="CColorConverter.h" />
@@ -733,6 +751,7 @@
     <ClCompile Include="..\..\src\irr\asset\CXMeshFileLoader.cpp" />
     <ClCompile Include="..\..\src\irr\asset\IAssetLoader.cpp" />
     <ClCompile Include="..\..\src\irr\asset\IAssetWriter.cpp" />
+    <ClCompile Include="..\..\src\irr\asset\IGLSLCompiler.cpp" />
     <ClCompile Include="..\..\src\irr\video\GPUMemoryAllocatorBase.cpp" />
     <ClCompile Include="..\..\src\irr\video\SimpleGPUBufferAllocator.cpp" />
     <ClCompile Include="aesGladman\aescrypt.c" />
@@ -839,6 +858,8 @@
     <ClCompile Include="IReferenceCounted.cpp" />
     <ClCompile Include="Irrlicht.cpp" />
     <ClCompile Include="IrrlichtDevice.cpp" />
+    <ClCompile Include="libshaderc\shaderc.cc" />
+    <ClCompile Include="libshaderc\version_profile.cc" />
     <ClCompile Include="lz4\lz4.c" />
     <ClCompile Include="lz4\lz4frame.c" />
     <ClCompile Include="lz4\lz4hc.c" />
@@ -851,6 +872,12 @@
     <ClCompile Include="lzma\Threads.c" />
     <ClCompile Include="os.cpp" />
     <ClCompile Include="lzma\LzmaDec.c" />
+    <ClCompile Include="spirv_cross\spirv_cfg.cpp" />
+    <ClCompile Include="spirv_cross\spirv_cross.cpp" />
+    <ClCompile Include="spirv_cross\spirv_cross_parsed_ir.cpp" />
+    <ClCompile Include="spirv_cross\spirv_glsl.cpp" />
+    <ClCompile Include="spirv_cross\spirv_parser.cpp" />
+    <ClCompile Include="spirv_cross\spirv_reflect.cpp" />
     <ClCompile Include="STextureSamplingParams.cpp" />
     <ClCompile Include="zlib\adler32.c" />
     <ClCompile Include="zlib\zcompress.c" />
