--- a/source/Irrlicht/CMakeLists.txt
+++ b/source/Irrlicht/CMakeLists.txt
@@ -310,6 +310,7 @@ add_library(spirv_cross OBJECT
 	spirv_cross/spirv_glsl.cpp
 	spirv_cross/spirv_reflect.cpp
 	spirv_cross/spirv_parser.cpp
+	spirv_cross/spirv_cross_parsed_ir.cpp
 )
 target_compile_definitions(spirv_cross PRIVATE SPIRV_CROSS_EXCEPTIONS_TO_ASSERTIONS)
 target_include_directories(spirv_cross PUBLIC ${COMMON_INCLUDE_DIRS})
