--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_subdirectory(spirv-headers)
-add_subdirectory(spirv-tools)
+add_subdirectory(SPIRV-Headers)
+add_subdirectory(SPIRV-Tools)
 add_subdirectory(glslang)
 add_subdirectory(shaderc)
