Workaround for Unix makefiles (GCC) build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,6 +104,9 @@ option(BUILD_EXAMPLES "Enable building examples" ON)
 
 option(BUILD_TOOLS "Enable building tools (just convert2BAW as for now)" ON)
 
+if (UNIX)
+	file(WRITE 3rdparty/shaderc/libshaderc/libshaderc_combined.a "") #https://github.com/google/shaderc/issues/568
+endif()
 add_subdirectory(3rdparty)
 
 add_subdirectory(source/Irrlicht) # Irrlicht code
