--- a/3rdparty/openssl/CMakeLists.txt
+++ b/3rdparty/openssl/CMakeLists.txt
@@ -1,22 +1,3 @@
-find_package(Git )
-
-if (GIT_FOUND)
-	# run those sequentially
-	execute_process(COMMAND "${GIT_EXECUTABLE} fetch"
-			WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/openssl"
-	)
-	execute_process(COMMAND "${GIT_EXECUTABLE} clean -fd"
-		WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/openssl"
-	)
-	execute_process(COMMAND "${GIT_EXECUTABLE} reset --hard origin/OpenSSL_1_0_2-stable"
-		WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/openssl"
-	)
-else()
-	message(WARNING "Git not found! Might be you have to update git-submodules manually")
-endif()
-# maybe you (Crisspl) can patch the OpenSSL source for the preprocessor MSVC bug here?
-
-
 if(WIN32)
 	find_package(Perl REQUIRED)
 	
@@ -49,7 +30,7 @@ if(WIN32)
 else()
 	add_custom_command(
 		OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/build/lib/libcrypto.a" "${CMAKE_CURRENT_BINARY_DIR}/build/lib/libssl.a"
-		./config no-shared --prefix=${CMAKE_CURRENT_BINARY_DIR}/build --openssldir=${CMAKE_CURRENT_BINARY_DIR}/build --api=1.0.2
+		COMMAND ./config no-shared --prefix=${CMAKE_CURRENT_BINARY_DIR}/build --openssldir=${CMAKE_CURRENT_BINARY_DIR}/build
 		COMMAND make -j64 # for the threadripper
 		COMMAND make install
 		WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/openssl"
