Link OpenSSL on Linux

--- a/source/Irrlicht/CMakeLists.txt
+++ b/source/Irrlicht/CMakeLists.txt
@@ -176,10 +176,18 @@ irr_adjust_flags() # macro defined in root CMakeLists
 irr_adjust_definitions() # macro defined in root CMakeLists
 
 macro(irr_target_link_openssl _trgt)
-	target_link_libraries(${_trgt} INTERFACE
-		"$<TARGET_PROPERTY:openssl_build,BINARY_DIR>/build/lib/libeay32.lib"
-		"$<TARGET_PROPERTY:openssl_build,BINARY_DIR>/build/lib/ssleay32.lib"
-	)
+	if(WIN32)
+		target_link_libraries(${_trgt} INTERFACE
+			"$<TARGET_PROPERTY:openssl_build,BINARY_DIR>/build/lib/libeay32.lib"
+			"$<TARGET_PROPERTY:openssl_build,BINARY_DIR>/build/lib/ssleay32.lib"
+		)
+	else()
+		target_link_libraries(${_trgt} INTERFACE
+			"$<TARGET_PROPERTY:openssl_build,BINARY_DIR>/build/lib/libcrypto.a"
+			"$<TARGET_PROPERTY:openssl_build,BINARY_DIR>/build/lib/libssl.a"
+		)
+	endif()
+
 	target_include_directories(${_trgt} PUBLIC "$<TARGET_PROPERTY:openssl_build,BINARY_DIR>/build/include")
 endmacro()
 macro(irr_target_link_shaderc _trgt)
